--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Links">
 <!ENTITY Ctr_right			"Rechts">
 <!ENTITY Ctr_privmode		"(Privates Fenster)">
+<!ENTITY Ctr_fontsize		"Schriftgröße: ">
 
 <!ENTITY Ctr_cuibuttons		"Schaltflächen">
 <!ENTITY Ctr_cuibutnormal	"Normal">
