--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Nalěwo">
 <!ENTITY Ctr_right			"Napšawo">
 <!ENTITY Ctr_privmode		"(priwatne wokno)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Tłocaški">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
