--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Αριστερά">
 <!ENTITY Ctr_right			"Δεξιά">
 <!ENTITY Ctr_privmode		"(ιδιωτικό παράθυρο)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Κουμπιά">
 <!ENTITY Ctr_cuibutnormal	"Κανονικά">
