--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Izquierda">
 <!ENTITY Ctr_right			"Derecha">
 <!ENTITY Ctr_privmode		"(ventana privada)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Botones">
 <!ENTITY Ctr_cuibutnormal	"Normales">
