--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Vasakule">
 <!ENTITY Ctr_right			"Paremale">
 <!ENTITY Ctr_privmode		"(privaatne aken)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Nupud">
 <!ENTITY Ctr_cuibutnormal	"Tavalised">
