--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Nalěwo">
 <!ENTITY Ctr_right			"Naprawo">
 <!ENTITY Ctr_privmode		"(priwatne wokno)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Tłóčatka">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
