--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Sinistra">
 <!ENTITY Ctr_right			"Destra">
 <!ENTITY Ctr_privmode		"(fiestra anonima)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Pulsanti">
 <!ENTITY Ctr_cuibutnormal	"Normali">
