--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"左揃え">
 <!ENTITY Ctr_right			"右揃え">
 <!ENTITY Ctr_privmode		"(プライベートウィンドウ)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"ボタン">
 <!ENTITY Ctr_cuibutnormal	"通常">
