--- a/xpi/locale/nl/options.dtd
+++ b/xpi/locale/nl/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Links">
 <!ENTITY Ctr_right			"Rechts">
 <!ENTITY Ctr_privmode		"(privévenster)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Knoppen">
 <!ENTITY Ctr_cuibutnormal	"Normaal">
