--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Lewa">
 <!ENTITY Ctr_right			"Prawa">
 <!ENTITY Ctr_privmode		"(okno prywatne)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Przyciski">
 <!ENTITY Ctr_cuibutnormal	"Normalne">
