--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Esquerda">
 <!ENTITY Ctr_right			"Direita">
 <!ENTITY Ctr_privmode		"(janela privativa)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Botões">
 <!ENTITY Ctr_cuibutnormal	"Normais">
