--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Слева">
 <!ENTITY Ctr_right			"Справа">
 <!ENTITY Ctr_privmode		"(приватное окно)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки:">
 <!ENTITY Ctr_cuibutnormal	"Обычные">
