--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Levo">
 <!ENTITY Ctr_right			"Desno">
 <!ENTITY Ctr_privmode		"(zasebno okno)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Gumbi">
 <!ENTITY Ctr_cuibutnormal	"Običajno">
