--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"Зліва">
 <!ENTITY Ctr_right			"Зправа">
 <!ENTITY Ctr_privmode		"(приватне вікно)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки">
 <!ENTITY Ctr_cuibutnormal	"Нормальні">
