--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"左">
 <!ENTITY Ctr_right			"右">
 <!ENTITY Ctr_privmode		"(隐私浏览窗口)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"按钮">
 <!ENTITY Ctr_cuibutnormal	"标准">
