--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -23,6 +23,7 @@
 <!ENTITY Ctr_left			"靠左對齊">
 <!ENTITY Ctr_right			"靠右對齊">
 <!ENTITY Ctr_privmode		"(隱私視窗)">
+<!ENTITY Ctr_fontsize		"Font size: ">
 
 <!ENTITY Ctr_cuibuttons		"按鈕">
 <!ENTITY Ctr_cuibutnormal	"標準圖示">
