--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -1,4 +1,4 @@
-﻿<!ENTITY % overlayDTD
+<!ENTITY % overlayDTD
     SYSTEM "chrome://classic_theme_restorer/content/overlay.dtd">
   %overlayDTD;
 <!-- Do not edit above this line and do not edit the variable '&brandShortName;' inside translated strings -->
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_left			"Sinistra">
 <!ENTITY Ctr_right			"Destra">
 <!ENTITY Ctr_privmode		"(fiestra anonima)">
-<!ENTITY Ctr_fontsize		"Font size: ">
+<!ENTITY Ctr_fontsize		"Dimensione dei caratteri: ">
 
 <!ENTITY Ctr_cuibuttons		"Pulsanti">
 <!ENTITY Ctr_cuibutnormal	"Normali">
@@ -381,10 +381,10 @@
 <!ENTITY Ctr_pananimation	"Icona animata all’apertura di un pannello">
 <!ENTITY Ctr_tabanimation	"Icona animata all’apertura o alla chiusura di una scheda">
 <!ENTITY Ctr_dlanimation	"Icona animata di avviso download">
-<!ENTITY Ctr_uianimation	"General ui animations">
+<!ENTITY Ctr_uianimation	"Animazioni nell’interfaccia base">
 <!ENTITY Ctr_fsanimation	"Icona animata all’attivazione della modalità 'A tutto schermo'">
 <!ENTITY Ctr_fsaduration	"Icona animata per la modalità 'A tutto schermo' degli elementi HTML5">
-<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
+<!ENTITY Ctr_findbarhl		"Barra per la ricerca nel testo: risultati evidenziati animati">
 
 <!ENTITY Ctr_toolsitem		"Aggiungi collegamento nel menu Strumenti">
 <!ENTITY Ctr_appmenuitem	"Aggiungi collegamento nel menu del Pulsante &brandShortName;">
