--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_left			"Izquierda">
 <!ENTITY Ctr_right			"Derecha">
 <!ENTITY Ctr_privmode		"(ventana privada)">
-<!ENTITY Ctr_fontsize		"Font size: ">
+<!ENTITY Ctr_fontsize		"Tamaño de fuente: ">
 
 <!ENTITY Ctr_cuibuttons		"Botones">
 <!ENTITY Ctr_cuibutnormal	"Normales">
@@ -384,7 +384,7 @@
 <!ENTITY Ctr_uianimation	"Animaciones de la interfaz general de usuario">
 <!ENTITY Ctr_fsanimation	"Animación del cambio a pantalla completa">
 <!ENTITY Ctr_fsaduration	"Animación del cambio a pantalla completa para contenidos HTML5">
-<!ENTITY Ctr_findbarhl		"Barra de herramientas de búsqueda: Animar el destacado de resultados">
+<!ENTITY Ctr_findbarhl		"Barra de herramientas de búsqueda: Animar el destacado de resultados (atenuación)">
 
 <!ENTITY Ctr_toolsitem		"Elemento en el menú Herramientas">
 <!ENTITY Ctr_appmenuitem	"Elemento en el menú de la aplicación">
@@ -406,7 +406,7 @@
 <!ENTITY Ctr_e_tabsaudioico	"Icono de reproducción de audio en las pestañas">
 <!ENTITY Ctr_e_containertab	"Pestañas contenedor">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_resfprinting "Protección contra perfilamiento (fingerprinting)">
+<!ENTITY Ctr_e_resfprinting "Protección contra perfilamiento">
 <!ENTITY Ctr_e_oldfontgfx	"Renderizado antiguo de fuentes">
 
 
