--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_left			"Lewa">
 <!ENTITY Ctr_right			"Prawa">
 <!ENTITY Ctr_privmode		"(okno prywatne)">
-<!ENTITY Ctr_fontsize		"Font size: ">
+<!ENTITY Ctr_fontsize		"Rozmiar czcionki: ">
 
 <!ENTITY Ctr_cuibuttons		"Przyciski">
 <!ENTITY Ctr_cuibutnormal	"Normalne">
@@ -349,7 +349,7 @@
 <!ENTITY Ctr_altmenubarpos2	"Poniżej paska tytułu programu &brandShortName;">
 <!ENTITY Ctr_menubarnofog	"Usuń kolor tła i mgłę (Windows AeroGlass/8)">
 
-<!ENTITY Ctr_aerocolors		"Niebieskie kolory Aero pasków narzędzi (i kart)">
+<!ENTITY Ctr_aerocolors		"Niebieskie kolory Aero">
 <!ENTITY Ctr_aerocolorsg	"Szaroniebieskie kolory Aero">
 <!ENTITY Ctr_transpttbw10	"Pasek tytułu/menu/kart: usuń kolor tła">
 <!ENTITY Ctr_transpttbew10	"Dodatkowe poprawki dla niektórych kompozycji systemu">
