--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_left			"Αριστερά">
 <!ENTITY Ctr_right			"Δεξιά">
 <!ENTITY Ctr_privmode		"(ιδιωτικό παράθυρο)">
-<!ENTITY Ctr_fontsize		"Font size: ">
+<!ENTITY Ctr_fontsize		"Μέγεθος γραμματοσειράς: ">
 
 <!ENTITY Ctr_cuibuttons		"Κουμπιά">
 <!ENTITY Ctr_cuibutnormal	"Κανονικά">
@@ -349,7 +349,7 @@
 <!ENTITY Ctr_altmenubarpos2	"Παρακάτω από τη γραμμή τίτλου του &brandShortName;">
 <!ENTITY Ctr_menubarnofog	"Απομάκρυνση χρώματος/ομίχλης φόντου (Windows AeroGlass/8)">
 
-<!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero» για εργαλειοθήκες (και καρτέλες)">
+<!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero»">
 <!ENTITY Ctr_aerocolorsg	"Γκρι-μπλε χρώματα «Aero»">
 <!ENTITY Ctr_transpttbw10	"Τίτλος/μενού/εργαλειοθήκη καρτελών: απομάκρυνση χρώματος φόντου">
 <!ENTITY Ctr_transpttbew10	"Επιπλέον πειράγματα για θέματα ορισμένων Λ.Σ.">
