--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_left			"À gauche">
 <!ENTITY Ctr_right			"À droite">
 <!ENTITY Ctr_privmode		"(fenêtre de navigation privée)">
-<!ENTITY Ctr_fontsize		"Font size: ">
+<!ENTITY Ctr_fontsize		"Taille de police :">
 
 <!ENTITY Ctr_cuibuttons		"Boutons :">
 <!ENTITY Ctr_cuibutnormal	"Taille normale">
@@ -36,7 +36,7 @@
 
 <!ENTITY Ctr_tnot			"(onglets pas au-dessus)">
 
-<!ENTITY Ctr_tabcolors_t	"Couleurs &amp; apparence du texte">
+<!ENTITY Ctr_tabcolors_t	"Couleurs &amp; texte">
 
 <!ENTITY Ctr_tabs			"Onglets">
 <!ENTITY Ctr_tabs0			"Réglage par défaut de &brandShortName; (onglets arrondis)">
@@ -349,7 +349,7 @@
 <!ENTITY Ctr_altmenubarpos2	"Sous la barre de titre &brandShortName; -">
 <!ENTITY Ctr_menubarnofog	"Enlever la couleur d'arrière-plan/le brouillard (Aero Glass de Windows/Windows 8)">
 
-<!ENTITY Ctr_aerocolors		"Utiliser des couleurs Aero bleues (pour les onglets également)">
+<!ENTITY Ctr_aerocolors		"Utiliser des couleurs Aero bleues">
 <!ENTITY Ctr_aerocolorsg	"Utiliser des couleurs Aero bleues/grises">
 <!ENTITY Ctr_transpttbw10	"Barres d'outils des onglets/des menus/de titre : enlever la couleur d'arrière-plan">
 <!ENTITY Ctr_transpttbew10	"Réglages supplémentaires pour certains thèmes du système d'exploitation">
@@ -412,10 +412,10 @@
 
 <!ENTITY Ctr_pw_settings	"Paramètres">
 <!ENTITY Ctr_pw_set_reset	"Restaurer les paramètres par défaut">
-<!ENTITY Ctr_pw_set_predef	"Paramètres classiques">
-<!ENTITY Ctr_pw_set_preaus	"Paramètres &brandShortName;">
+<!ENTITY Ctr_pw_set_predef	"Profil classique">
+<!ENTITY Ctr_pw_set_preaus	"Profil &brandShortName;">
 <!ENTITY Ctr_pw_set_export	"Exporter les paramètres">
-<!ENTITY Ctr_pw_set_import	"Importer des paramètres">
+<!ENTITY Ctr_pw_set_import	"Importer les paramètres">
 <!ENTITY Ctr_pw_set_syncon	"Ajouter à Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Retirer de Sync">
 <!ENTITY Ctr_pw_set_impexp	"Les paramètres contenant une description avec « about:config » proviennent du navigateur et ne sont donc ni exportés ni importés !">
