--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_left			"左揃え">
 <!ENTITY Ctr_right			"右揃え">
 <!ENTITY Ctr_privmode		"(プライベートウィンドウ)">
-<!ENTITY Ctr_fontsize		"Font size: ">
+<!ENTITY Ctr_fontsize		"文字サイズ: ">
 
 <!ENTITY Ctr_cuibuttons		"ボタン">
 <!ENTITY Ctr_cuibutnormal	"通常">
@@ -349,7 +349,7 @@
 <!ENTITY Ctr_altmenubarpos2	"&brandShortName; タイトルバーの下">
 <!ENTITY Ctr_menubarnofog	"背景色とぼかしを取り除く (Windows AeroGlass / Win8)">
 
-<!ENTITY Ctr_aerocolors		"ツールバーとタブを Aero カラーに変更する">
+<!ENTITY Ctr_aerocolors		"Aero カラーに変更する">
 <!ENTITY Ctr_aerocolorsg	"グレー系の Aero カラーに変更する">
 <!ENTITY Ctr_transpttbw10	"タイトル/メニュー/タブ ツールバー: 背景色を取り除く">
 <!ENTITY Ctr_transpttbew10	"いくつかのシステムテーマのための追加の微調整">
