--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_left			"Слева">
 <!ENTITY Ctr_right			"Справа">
 <!ENTITY Ctr_privmode		"(приватное окно)">
-<!ENTITY Ctr_fontsize		"Font size: ">
+<!ENTITY Ctr_fontsize		"Размер шрифта: ">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки:">
 <!ENTITY Ctr_cuibutnormal	"Обычные">
@@ -381,7 +381,7 @@
 <!ENTITY Ctr_pananimation	"Анимация открытия панели">
 <!ENTITY Ctr_tabanimation	"Анимация открытия и закрытия вкладок">
 <!ENTITY Ctr_dlanimation	"Анимация «Загрузка завершена»">
-<!ENTITY Ctr_uianimation	"General ui animations">
+<!ENTITY Ctr_uianimation	"Анимация основного пользовательского интерфейса">
 <!ENTITY Ctr_fsanimation	"Полноэкранная анимация">
 <!ENTITY Ctr_fsaduration	"Полноэкранная анимация для HTML5 контента">
 <!ENTITY Ctr_findbarhl		"Панель поиска: анимировать подсветку результатов">
