--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Přejít">
 <!ENTITY Ctr_menu_restart.label			"Restart">
 <!ENTITY Ctr_restartapp					"Tlačítko 'Restart' v nabídce &brandShortName; a v nabídce Soubor">
+<!ENTITY Ctr_restartapp2				"Tlačítko 'Restart' v menu hlavního panelu">
 <!ENTITY Ctr_ctrnewinv					"Podtrhávat nové možnosti v aktuální verzi &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Vlastní CSS kódy">
 <!ENTITY Ctr_cssoverride2				"CSS kód není kontrolován na chyby!">
