--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Los">
 <!ENTITY Ctr_menu_restart.label			"Neustarten">
 <!ENTITY Ctr_restartapp					"'Neustarten'-Eintrag im '&brandShortName;'- und 'Datei-Menü'">
+<!ENTITY Ctr_restartapp2				"'Neustarten'-Eintrag in der Hauptmenüschaltfläche">
 <!ENTITY Ctr_ctrnewinv					"Einstellungen für diese &brandShortName; Version 'unterstreichen'">
 <!ENTITY Ctr_cssoverride				"Eigener CSS-Code">
 <!ENTITY Ctr_cssoverride2				"CSS-Code wird nicht auf Fehler überprüft!">
