--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Start">
 <!ENTITY Ctr_menu_restart.label			"Znowego startowaś">
 <!ENTITY Ctr_restartapp					"Znowego startowaś w meniju '&brandShortName;' a w meniju Dataja pokazaś">
+<!ENTITY Ctr_restartapp2				"Znowego startowaś w głownem meniju">
 <!ENTITY Ctr_ctrnewinv					"Nowe nastajenja za aktualnu wersiju &brandShortName; pódšmarnuś">
 <!ENTITY Ctr_cssoverride				"Swójski CSS-kod">
 <!ENTITY Ctr_cssoverride2				"CSS-kod njebuźo se za zmólkami pśeglědowaś!">
