--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Mine">
 <!ENTITY Ctr_menu_restart.label			"Taaskäivita">
 <!ENTITY Ctr_restartapp					"Näita &brandShortName;i nupu menüüs ja menüüs Fail kirjet 'Taaskäivita'">
+<!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
 <!ENTITY Ctr_ctrnewinv					"Jooni alla sätted, mis on &brandShortName;i praeguses versioonis uued">
 <!ENTITY Ctr_cssoverride				"Kohandatud CSS-kood">
 <!ENTITY Ctr_cssoverride2				"CSS-koodist ei kontrollita vigu!">
