--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Se rendre à la page indiquée dans la barre d'adresse">
 <!ENTITY Ctr_menu_restart.label			"Redémarrer">
 <!ENTITY Ctr_restartapp					"Afficher « Redémarrer » dans le menu « Fichier » et dans celui de l'ancien bouton &brandShortName;">
+<!ENTITY Ctr_restartapp2				"Afficher « Redémarrer » dans le panneau du menu principal">
 <!ENTITY Ctr_ctrnewinv					"Souligner les nouvelles options de la version actuelle de &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Code CSS personnalisé">
 <!ENTITY Ctr_cssoverride2				"Le code CSS ne sera pas vérifié, même en cas d'erreurs !">
