--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Vai">
 <!ENTITY Ctr_menu_restart.label			"Riavvia">
 <!ENTITY Ctr_restartapp					"'Riavvia' nel menu del Pulsante &brandShortName; e nel menu File">
+<!ENTITY Ctr_restartapp2				"'Riavvia' nel pannello del menu principale">
 <!ENTITY Ctr_ctrnewinv					"Sottolinea le nuove opzioni della versione corrente di &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Codice css personalizzato">
 <!ENTITY Ctr_cssoverride2				"Il codice css non sarà verificato per la presenza di errori!">
