--- a/xpi/locale/nl/options.dtd
+++ b/xpi/locale/nl/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Gaan">
 <!ENTITY Ctr_menu_restart.label			"Herstarten">
 <!ENTITY Ctr_restartapp					"‘Herstarten’ tonen in menu &brandShortName; en menu Bestand">
+<!ENTITY Ctr_restartapp2				"‘Herstarten’ tonen in hoofdpaneelmenu">
 <!ENTITY Ctr_ctrnewinv					"Nieuwe opties voor huidige &brandShortName;-versie onderstrepen">
 <!ENTITY Ctr_cssoverride				"Aangepaste CSS-code">
 <!ENTITY Ctr_cssoverride2				"CSS-code wordt niet op fouten gecontroleerd!">
