--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Przejdź">
 <!ENTITY Ctr_menu_restart.label			"Zrestartuj">
 <!ENTITY Ctr_restartapp					"Pokaż 'Zrestartuj' w menu programu &brandShortName; oraz w menu Plik">
+<!ENTITY Ctr_restartapp2				"Pokaż 'Zrestartuj' w menu głównego panelu">
 <!ENTITY Ctr_ctrnewinv					"Podkreśl nowe opcje dla bieżącej wersji programu &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Niestandardowy kod CSS">
 <!ENTITY Ctr_cssoverride2				"Kod CSS nie będzie sprawdzony pod kątem błędów!">
