--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Ir">
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"Exibir 'Reiniciar' no menu &brandShortName; e menu Arquivo">
+<!ENTITY Ctr_restartapp2				"Exibir 'Reiniciar' no menu painel principal">
 <!ENTITY Ctr_ctrnewinv					"Sublinhar novas opções da atual versão do &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Código CSS personalizado">
 <!ENTITY Ctr_cssoverride2				"O código CSS não será verificado por erros!">
