--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Перейти">
 <!ENTITY Ctr_menu_restart.label			"Рестарт">
 <!ENTITY Ctr_restartapp					"«Рестарт» в кнопці програми та в меню «Файл»">
+<!ENTITY Ctr_restartapp2				"«Рестарт» в меню основної панелі">
 <!ENTITY Ctr_ctrnewinv					"Підкреслені нові опції для поточної версії &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Налаштовуваний css код">
 <!ENTITY Ctr_cssoverride2				"Css код не буде перевірено на помилки!">
