--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"转到">
 <!ENTITY Ctr_menu_restart.label			"重启">
 <!ENTITY Ctr_restartapp					"在应用菜单和文件菜单中显示 “重启”">
+<!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
 <!ENTITY Ctr_ctrnewinv					"为当前 &brandShortName; 版本的新选项添加下划线">
 <!ENTITY Ctr_cssoverride				"自定义 CSS 代码">
 <!ENTITY Ctr_cssoverride2				"不会对 CSS 代码进行错误检查!">
