--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Gå">
 <!ENTITY Ctr_menu_restart.label			"Genstart">
 <!ENTITY Ctr_restartapp					"Vis 'Genstart' i &brandShortName;-menu og Filer-menu">
+<!ENTITY Ctr_restartapp2				"Vis 'Genstart' i hovedpanelmenu">
 <!ENTITY Ctr_ctrnewinv					"Understreg nye indstillinger for nuværende &brandShortName; version">
 <!ENTITY Ctr_cssoverride				"Custom css code">
 <!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
