--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Μετάβαση">
 <!ENTITY Ctr_menu_restart.label			"Επανεκκίνηση">
 <!ENTITY Ctr_restartapp					"Στοιχείο «Επανεκκίνηση» στα μενού κουμπιού &brandShortName; και «Αρχείο»">
+<!ENTITY Ctr_restartapp2				"Στοιχείο «Επανεκκίνηση» στα μενού κύριο μενού πίνακα">
 <!ENTITY Ctr_ctrnewinv					"Υπογράμμιση νέων επιλογών για την τρέχουσα έκδοση του &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Προσαρμοσμένος κώδικας css">
 <!ENTITY Ctr_cssoverride2				"Ο κώδικας css δεν θα ελεγχθεί για σφάλματα!">
