--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Go">
 <!ENTITY Ctr_menu_restart.label			"Restart">
 <!ENTITY Ctr_restartapp					"Show 'Restart' in &brandShortName; menu and File menu">
+<!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
 <!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
 <!ENTITY Ctr_cssoverride				"Custom css code">
 <!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
