--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Ir">
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"'Reiniciar' en el menú de &brandShortName; y el menú 'Archivo'">
+<!ENTITY Ctr_restartapp2				"'Reiniciar' en el menú de panel principal">
 <!ENTITY Ctr_ctrnewinv					"Subrayar opciones nuevas para la actual versión de &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Código CSS personalizado">
 <!ENTITY Ctr_cssoverride2				"¡No se revisará en busca de errores!">
