--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -436,6 +436,7 @@
 <!ENTITY goCmd.label					"Go">
 <!ENTITY Ctr_menu_restart.label			"重啟">
 <!ENTITY Ctr_restartapp					"&brandShortName;-選單和「檔案」選單裡顯示「重啟」按鈕">
+<!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
 <!ENTITY Ctr_ctrnewinv					"為目前 &brandShortName; 版本的新設定項畫上底線">
 <!ENTITY Ctr_cssoverride				"自訂樣式">
 <!ENTITY Ctr_cssoverride2				"不會檢查 CSS 樣式代碼是否有錯！">
