Updates to the Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -436,7 +436,7 @@
 <!ENTITY goCmd.label					"Pojdi">
 <!ENTITY Ctr_menu_restart.label			"Ponovno zaženi">
 <!ENTITY Ctr_restartapp					"'Ponovno zaženi' v programskem meniju in meniju Datoteka">
-<!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
+<!ENTITY Ctr_restartapp2				"Prikaži 'Ponovno zaženi' v ploščastem meniju">
 <!ENTITY Ctr_ctrnewinv					"Podčrtaj nove možnosti za trenutno različico &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Način CSS po meri">
 <!ENTITY Ctr_cssoverride2				"Koda CSS ne bo preverjena za napake!">
