--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_left			"Vasakule">
 <!ENTITY Ctr_right			"Paremale">
 <!ENTITY Ctr_privmode		"(privaatne aken)">
-<!ENTITY Ctr_fontsize		"Font size: ">
+<!ENTITY Ctr_fontsize		"Kirjasuurus: ">
 
 <!ENTITY Ctr_cuibuttons		"Nupud">
 <!ENTITY Ctr_cuibutnormal	"Tavalised">
@@ -436,7 +436,7 @@
 <!ENTITY goCmd.label					"Mine">
 <!ENTITY Ctr_menu_restart.label			"Taaskäivita">
 <!ENTITY Ctr_restartapp					"Näita &brandShortName;i nupu menüüs ja menüüs Fail kirjet 'Taaskäivita'">
-<!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
+<!ENTITY Ctr_restartapp2				"Näita paneelimenüüs kirjet 'Taaskäivita'">
 <!ENTITY Ctr_ctrnewinv					"Jooni alla sätted, mis on &brandShortName;i praeguses versioonis uued">
 <!ENTITY Ctr_cssoverride				"Kohandatud CSS-kood">
 <!ENTITY Ctr_cssoverride2				"CSS-koodist ei kontrollita vigu!">
