--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -435,8 +435,8 @@
 <!ENTITY appMenuGettingStarted.label	"Ξεκινώντας">
 <!ENTITY goCmd.label					"Μετάβαση">
 <!ENTITY Ctr_menu_restart.label			"Επανεκκίνηση">
-<!ENTITY Ctr_restartapp					"Στοιχείο «Επανεκκίνηση» στα μενού κουμπιού &brandShortName; και «Αρχείο»">
-<!ENTITY Ctr_restartapp2				"Στοιχείο «Επανεκκίνηση» στα μενού κύριο μενού πίνακα">
+<!ENTITY Ctr_restartapp					"Στοιχείο μενού «Επανεκκίνηση» στα μενού κουμπιού &brandShortName; και «Αρχείο»">
+<!ENTITY Ctr_restartapp2				"Στοιχείο μενού «Επανεκκίνηση» στο κύριο μενού πίνακα">
 <!ENTITY Ctr_ctrnewinv					"Υπογράμμιση νέων επιλογών για την τρέχουσα έκδοση του &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Προσαρμοσμένος κώδικας css">
 <!ENTITY Ctr_cssoverride2				"Ο κώδικας css δεν θα ελεγχθεί για σφάλματα!">
