--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -436,7 +436,7 @@
 <!ENTITY goCmd.label					"移動">
 <!ENTITY Ctr_menu_restart.label			"リスタート">
 <!ENTITY Ctr_restartapp					"&brandShortName; メニューとファイルメニューにリスタートを追加する">
-<!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
+<!ENTITY Ctr_restartapp2				"パネルメニューにリスタートを表示する">
 <!ENTITY Ctr_ctrnewinv					"現在のバージョンの &brandShortName; 用の新しいオプションに下線を引く">
 <!ENTITY Ctr_cssoverride				"カスタムCSSコード">
 <!ENTITY Ctr_cssoverride2				"CSSコードのエラーは検証されません！">
