--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"Na konci lišty s panely">
 <!ENTITY Ctr_closetab_4		"Na začátku lišty s panely">
 <!ENTITY Ctr_closetab_5		"Na všech panelech (vynutit)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Skrýt pro jeden viditelný panel">
 <!ENTITY Ctr_closei_def		"Defaultní icony">
 <!ENTITY Ctr_closeonleft	"Alternativní pozice na panelu">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Restart">
 <!ENTITY Ctr_restartapp					"Tlačítko 'Restart' v nabídce &brandShortName; a v nabídce Soubor">
 <!ENTITY Ctr_restartapp2				"Tlačítko 'Restart' v menu hlavního panelu">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Podtrhávat nové možnosti v aktuální verzi &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Vlastní CSS kódy">
 <!ENTITY Ctr_cssoverride2				"CSS kód není kontrolován na chyby!">
