--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"I slutningen af fanebladslinjer">
 <!ENTITY Ctr_closetab_4		"I starten af fanebladslinjer">
 <!ENTITY Ctr_closetab_5		"På alle faneblade (tvunget)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Skjul hvis der kun er ét synligt faneblad">
 <!ENTITY Ctr_closei_def		"Standard ikoner">
 <!ENTITY Ctr_closeonleft	"Alternativ placering på faneblad">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Genstart">
 <!ENTITY Ctr_restartapp					"Vis 'Genstart' i &brandShortName;-menu og Filer-menu">
 <!ENTITY Ctr_restartapp2				"Vis 'Genstart' i hovedpanelmenu">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Understreg nye indstillinger for nuværende &brandShortName; version">
 <!ENTITY Ctr_cssoverride				"Custom css code">
 <!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
