--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"Am Ende der Tableiste">
 <!ENTITY Ctr_closetab_4		"Am Anfang der Tableiste">
 <!ENTITY Ctr_closetab_5		"Auf allen Tabs erzwingen">
+<!ENTITY Ctr_closetab_6		"Nur auf gehovertem Tab">
 <!ENTITY Ctr_closetab_hfot	"Bei nur einem sichtbaren Tab verstecken">
 <!ENTITY Ctr_closei_def		"Standard-Symbol">
 <!ENTITY Ctr_closeonleft	"Am Anfang des Tabs">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Neustarten">
 <!ENTITY Ctr_restartapp					"'Neustarten'-Eintrag im '&brandShortName;'- und 'Datei-Menü'">
 <!ENTITY Ctr_restartapp2				"'Neustarten'-Eintrag in der Hauptmenüschaltfläche">
+<!ENTITY Ctr_contextfind				"'Suchen' und 'Weitersuchen' im Leistenkontextmenü">
 <!ENTITY Ctr_ctrnewinv					"Einstellungen für diese &brandShortName; Version 'unterstreichen'">
 <!ENTITY Ctr_cssoverride				"Eigener CSS-Code">
 <!ENTITY Ctr_cssoverride2				"CSS-Code wird nicht auf Fehler überprüft!">
