--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"Στο τέλος της εργαλειοθήκης καρτελών">
 <!ENTITY Ctr_closetab_4		"Στην αρχή της εργαλειοθήκης καρτελών">
 <!ENTITY Ctr_closetab_5		"Σε όλες τις καρτέλες (επιβεβλημένα)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Απόκρυψη για μόνο μία ορατή καρτέλα">
 <!ENTITY Ctr_closei_def		"Προεπιλεγμένα εικονίδια">
 <!ENTITY Ctr_closeonleft	"Εναλλακτική θέση στην καρτέλα">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Επανεκκίνηση">
 <!ENTITY Ctr_restartapp					"Στοιχείο μενού «Επανεκκίνηση» στα μενού κουμπιού &brandShortName; και «Αρχείο»">
 <!ENTITY Ctr_restartapp2				"Στοιχείο μενού «Επανεκκίνηση» στο κύριο μενού πίνακα">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Υπογράμμιση νέων επιλογών για την τρέχουσα έκδοση του &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Προσαρμοσμένος κώδικας css">
 <!ENTITY Ctr_cssoverride2				"Ο κώδικας css δεν θα ελεγχθεί για σφάλματα!">
