--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"On tab toolbars end">
 <!ENTITY Ctr_closetab_4		"On tab toolbars start">
 <!ENTITY Ctr_closetab_5		"On all tabs (forced)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Hide for one visible tab">
 <!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Alternative position on tab">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Restart">
 <!ENTITY Ctr_restartapp					"Show 'Restart' in &brandShortName; menu and File menu">
 <!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
 <!ENTITY Ctr_cssoverride				"Custom css code">
 <!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
