--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"Al final de las barras de pestañas">
 <!ENTITY Ctr_closetab_4		"Al principio de las barras de pestañas">
 <!ENTITY Ctr_closetab_5		"En todas las pestañas (forzado)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Ocultar para una sola pestaña visible">
 <!ENTITY Ctr_closei_def		"Iconos predeterminados">
 <!ENTITY Ctr_closeonleft	"Posición alternativa en la pestaña">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"'Reiniciar' en el menú de &brandShortName; y el menú 'Archivo'">
 <!ENTITY Ctr_restartapp2				"'Reiniciar' en el menú de panel principal">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Subrayar opciones nuevas para la actual versión de &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Código CSS personalizado">
 <!ENTITY Ctr_cssoverride2				"¡No se revisará en busca de errores!">
