--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"À la fin de la barre des onglets">
 <!ENTITY Ctr_closetab_4		"Au début de la barre des onglets">
 <!ENTITY Ctr_closetab_5		"Sur tous les onglets (forcer)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Masquer le bouton lorsqu'un seul onglet est visible">
 <!ENTITY Ctr_closei_def		"Icônes par défaut">
 <!ENTITY Ctr_closeonleft	"Position alternative sur l'onglet">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Redémarrer">
 <!ENTITY Ctr_restartapp					"Afficher « Redémarrer » dans le menu « Fichier » et dans celui de l'ancien bouton &brandShortName;">
 <!ENTITY Ctr_restartapp2				"Afficher « Redémarrer » dans le panneau du bouton de menu">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Souligner les nouvelles options de la version actuelle de &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Code CSS personnalisé">
 <!ENTITY Ctr_cssoverride2				"Le code CSS ne sera pas vérifié, même en cas d'erreurs !">
