--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"Na kóncu rajtarkoweje lajsty">
 <!ENTITY Ctr_closetab_4		"Na spočatku rajtarkoweje lajsty">
 <!ENTITY Ctr_closetab_5		"Na wšěch rajtarkach (wunuzowany)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Za jedyn widźomny rajtark schować">
 <!ENTITY Ctr_closei_def		"Standardne symbole">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rajtarku">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Znowa startować">
 <!ENTITY Ctr_restartapp					"Znowa startować w meniju '&brandShortName;' a w meniju 'Dataja' pokazać">
 <!ENTITY Ctr_restartapp2				"Znowa startować w hłownym meniju pokazać">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Nowe wersije za aktualnu wersiju &brandShortName; podšmórnyć">
 <!ENTITY Ctr_cssoverride				"Swójski CSS-kod">
 <!ENTITY Ctr_cssoverride2				"CSS-kod njebudźe so za zmylkami přepruwować!">
