--- a/xpi/locale/nl/options.dtd
+++ b/xpi/locale/nl/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"Op einde van tabbladenwerkbalken">
 <!ENTITY Ctr_closetab_4		"Op begin van tabbladenwerkbalken">
 <!ENTITY Ctr_closetab_5		"Op alle tabbladen (geforceerd)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Verbergen voor één zichtbaar tabblad">
 <!ENTITY Ctr_closei_def		"Standaardpictogrammen">
 <!ENTITY Ctr_closeonleft	"Alternatieve positie op tabblad">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Herstarten">
 <!ENTITY Ctr_restartapp					"‘Herstarten’ tonen in menu &brandShortName; en menu Bestand">
 <!ENTITY Ctr_restartapp2				"‘Herstarten’ tonen in hoofdpaneelmenu">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Nieuwe opties voor huidige &brandShortName;-versie onderstrepen">
 <!ENTITY Ctr_cssoverride				"Aangepaste CSS-code">
 <!ENTITY Ctr_cssoverride2				"CSS-code wordt niet op fouten gecontroleerd!">
