--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"Na końcu paska kart">
 <!ENTITY Ctr_closetab_4		"Na początku paska kart">
 <!ENTITY Ctr_closetab_5		"Na wszystkich kartach (wymuszone)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Ukryj na jednej widocznej karcie">
 <!ENTITY Ctr_closei_def		"Domyślne ikony">
 <!ENTITY Ctr_closeonleft	"Alternatywna pozycja na karcie">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Zrestartuj">
 <!ENTITY Ctr_restartapp					"Pokaż 'Zrestartuj' w menu programu &brandShortName; oraz w menu Plik">
 <!ENTITY Ctr_restartapp2				"Pokaż 'Zrestartuj' w menu głównego panelu">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Podkreśl nowe opcje dla bieżącej wersji programu &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Niestandardowy kod CSS">
 <!ENTITY Ctr_cssoverride2				"Kod CSS nie będzie sprawdzony pod kątem błędów!">
