--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"в конце панели">
 <!ENTITY Ctr_closetab_4		"в начале панели">
 <!ENTITY Ctr_closetab_5		"на всех вкладках (принудительно)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Скрыть для одной вкладки">
 <!ENTITY Ctr_closei_def		"Стандартный значок">
 <!ENTITY Ctr_closeonleft	"Альтернативная позиция на вкладке">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Перезапуск">
 <!ENTITY Ctr_restartapp					"«Перезапуск» в меню приложения/файл">
 <!ENTITY Ctr_restartapp2				"«Перезапуск» в главном меню панели">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Подчёркивать новые опции для текущей версии &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Пользовательский CSS-код">
 <!ENTITY Ctr_cssoverride2				"CSS-код не проверяется на наличие ошибок!">
