--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"в кінці панелі">
 <!ENTITY Ctr_closetab_4		"на початку панелі">
 <!ENTITY Ctr_closetab_5		"на всіх вкладках (примусово)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"Приховати для однієї видимої вкладки">
 <!ENTITY Ctr_closei_def		"Типові іконки">
 <!ENTITY Ctr_closeonleft	"Альтернативна позиція на вкладці">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Рестарт">
 <!ENTITY Ctr_restartapp					"«Рестарт» в кнопці програми та в меню «Файл»">
 <!ENTITY Ctr_restartapp2				"«Рестарт» в меню основної панелі">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"Підкреслені нові опції для поточної версії &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Налаштовуваний css код">
 <!ENTITY Ctr_cssoverride2				"Css код не буде перевірено на помилки!">
