--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -80,6 +80,7 @@
 <!ENTITY Ctr_closetab_3		"在分頁列右端顯示關閉按鈕">
 <!ENTITY Ctr_closetab_4		"在分頁列左端顯示關閉按鈕">
 <!ENTITY Ctr_closetab_5		"全部的分頁都顯示關閉按鈕 (強制)">
+<!ENTITY Ctr_closetab_6		"On hovered tab only">
 <!ENTITY Ctr_closetab_hfot	"只有一個分頁時，則隱藏關閉按鈕">
 <!ENTITY Ctr_closei_def		"預設圖示">
 <!ENTITY Ctr_closeonleft	"關閉按鈕置於分頁左側">
@@ -437,6 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"重啟">
 <!ENTITY Ctr_restartapp					"&brandShortName;-選單和「檔案」選單裡顯示「重啟」按鈕">
 <!ENTITY Ctr_restartapp2				"Show 'Restart' in panel menu">
+<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
 <!ENTITY Ctr_ctrnewinv					"為目前 &brandShortName; 版本的新設定項畫上底線">
 <!ENTITY Ctr_cssoverride				"自訂樣式">
 <!ENTITY Ctr_cssoverride2				"不會檢查 CSS 樣式代碼是否有錯！">
