--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -76,11 +76,11 @@
 <!ENTITY Ctr_noemptypticon	"Eliminar favicon vacío en pestañas fijadas">
 <!ENTITY Ctr_closetab_0		"Botón de cierre de pestaña">
 <!ENTITY Ctr_closetab_1		"Sólo en la pestaña activa">
-<!ENTITY Ctr_closetab_2		"En ninguna parte">
+<!ENTITY Ctr_closetab_2		"En ningún lugar">
 <!ENTITY Ctr_closetab_3		"Al final de las barras de pestañas">
 <!ENTITY Ctr_closetab_4		"Al principio de las barras de pestañas">
 <!ENTITY Ctr_closetab_5		"En todas las pestañas (forzado)">
-<!ENTITY Ctr_closetab_6		"On hovered tab only">
+<!ENTITY Ctr_closetab_6		"Sólo en la pestaña señalada">
 <!ENTITY Ctr_closetab_hfot	"Ocultar para una sola pestaña visible">
 <!ENTITY Ctr_closei_def		"Iconos predeterminados">
 <!ENTITY Ctr_closeonleft	"Posición alternativa en la pestaña">
@@ -408,7 +408,7 @@
 <!ENTITY Ctr_e_containertab	"Pestañas contenedor">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
 <!ENTITY Ctr_e_resfprinting "Protección contra perfilamiento">
-<!ENTITY Ctr_e_oldfontgfx	"Renderizado antiguo de fuentes">
+<!ENTITY Ctr_e_oldfontgfx	"Antiguo renderizado de fuentes">
 
 
 <!ENTITY Ctr_pw_settings	"Configuración">
@@ -438,7 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"'Reiniciar' en el menú de &brandShortName; y el menú 'Archivo'">
 <!ENTITY Ctr_restartapp2				"'Reiniciar' en el menú de panel principal">
-<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
+<!ENTITY Ctr_contextfind				"Mostrar 'Buscar' y 'Buscar de nuevo' en el menú contextual de barras de herramientas">
 <!ENTITY Ctr_ctrnewinv					"Subrayar opciones nuevas para la actual versión de &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Código CSS personalizado">
 <!ENTITY Ctr_cssoverride2				"¡No se revisará en busca de errores!">
