Update zh-CN locale

--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -80,7 +80,7 @@
 <!ENTITY Ctr_closetab_3		"在标签页栏尾部">
 <!ENTITY Ctr_closetab_4		"在标签页栏头部">
 <!ENTITY Ctr_closetab_5		"在所有标签页上显示 (强制)">
-<!ENTITY Ctr_closetab_6		"On hovered tab only">
+<!ENTITY Ctr_closetab_6		"仅在鼠标悬停的标签页上显示">
 <!ENTITY Ctr_closetab_hfot	"仅一个可见标签页时隐藏">
 <!ENTITY Ctr_closei_def		"默认图标">
 <!ENTITY Ctr_closeonleft	"标签页上的备选位置">
@@ -438,7 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"重启">
 <!ENTITY Ctr_restartapp					"在应用菜单和文件菜单中显示“重启”">
 <!ENTITY Ctr_restartapp2				"在面板菜单中显示“重启”">
-<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
+<!ENTITY Ctr_contextfind				"在工具栏右键菜单中显示“查找”和“再次查找”">
 <!ENTITY Ctr_ctrnewinv					"为当前 &brandShortName; 版本的新选项添加下划线">
 <!ENTITY Ctr_cssoverride				"自定义 CSS 代码">
 <!ENTITY Ctr_cssoverride2				"不会对 CSS 代码进行错误检查!">
