--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -80,7 +80,7 @@
 <!ENTITY Ctr_closetab_3		"Na kóńcu rejtarkoweje rědki">
 <!ENTITY Ctr_closetab_4		"Na zachopjeńku rejtarkoweje rědki">
 <!ENTITY Ctr_closetab_5		"Na wšych rejtarkach (wunuźony)">
-<!ENTITY Ctr_closetab_6		"On hovered tab only">
+<!ENTITY Ctr_closetab_6		"Jano na rejtarku pód kursorom">
 <!ENTITY Ctr_closetab_hfot	"Za jaden widobny rejtark schowaś">
 <!ENTITY Ctr_closei_def		"Standardne symbole">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rejtarku">
@@ -438,7 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Znowego startowaś">
 <!ENTITY Ctr_restartapp					"Znowego startowaś w meniju '&brandShortName;' a w meniju Dataja pokazaś">
 <!ENTITY Ctr_restartapp2				"Znowego startowaś w głownem meniju pokazaś">
-<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
+<!ENTITY Ctr_contextfind				"'Pytaś' a 'Dalej pytaś' w kontekstowem meniju symbolowych rědkow pokazaś">
 <!ENTITY Ctr_ctrnewinv					"Nowe nastajenja za aktualnu wersiju &brandShortName; pódšmarnuś">
 <!ENTITY Ctr_cssoverride				"Swójski CSS-kod">
 <!ENTITY Ctr_cssoverride2				"CSS-kod njebuźo se za zmólkami pśeglědowaś!">
