--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -80,7 +80,7 @@
 <!ENTITY Ctr_closetab_3		"Kaartide riba lõpus">
 <!ENTITY Ctr_closetab_4		"Kaartide riba alguses">
 <!ENTITY Ctr_closetab_5		"Kõikidel kaartidel (sunnitud)">
-<!ENTITY Ctr_closetab_6		"On hovered tab only">
+<!ENTITY Ctr_closetab_6		"Ainult hiirega osutatud kaardil">
 <!ENTITY Ctr_closetab_hfot	"Peida, kui näha on ainult üks kaart">
 <!ENTITY Ctr_closei_def		"Vaikimisi ikoonid">
 <!ENTITY Ctr_closeonleft	"Alternatiivne asukoht kaardil">
@@ -438,7 +438,7 @@
 <!ENTITY Ctr_menu_restart.label			"Taaskäivita">
 <!ENTITY Ctr_restartapp					"Näita &brandShortName;i nupu menüüs ja menüüs Fail kirjet 'Taaskäivita'">
 <!ENTITY Ctr_restartapp2				"Näita paneelimenüüs kirjet 'Taaskäivita'">
-<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
+<!ENTITY Ctr_contextfind				"Näita tööriistariba kontekstimenüüs kirjeid 'Otsi sellelt lehelt...' ja 'Otsi uuesti'">
 <!ENTITY Ctr_ctrnewinv					"Jooni alla sätted, mis on &brandShortName;i praeguses versioonis uued">
 <!ENTITY Ctr_cssoverride				"Kohandatud CSS-kood">
 <!ENTITY Ctr_cssoverride2				"CSS-koodist ei kontrollita vigu!">
