Update to the Brazilian Portuguese translation

--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -80,7 +80,7 @@
 <!ENTITY Ctr_closetab_3		"No final das barras de abas">
 <!ENTITY Ctr_closetab_4		"No início das barras de abas">
 <!ENTITY Ctr_closetab_5		"Em todas as abas (forçada)">
-<!ENTITY Ctr_closetab_6		"On hovered tab only">
+<!ENTITY Ctr_closetab_6		"Somente na guia em foco">
 <!ENTITY Ctr_closetab_hfot	"Ocultar com uma aba visível">
 <!ENTITY Ctr_closei_def		"Ícones padrão">
 <!ENTITY Ctr_closeonleft	"Posição alternativa na aba">
@@ -437,8 +437,8 @@
 <!ENTITY goCmd.label					"Ir">
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"Exibir 'Reiniciar' no menu &brandShortName; e menu Arquivo">
-<!ENTITY Ctr_restartapp2				"Exibir 'Reiniciar' no menu painel principal">
-<!ENTITY Ctr_contextfind				"Show 'Find' and 'Find Again' in toolbars context menu">
+<!ENTITY Ctr_restartapp2				"Mostrar 'Reiniciar' do menu do painel">
+<!ENTITY Ctr_contextfind				"Mostrar 'Localizar' e 'Localizar Novamente' no menu de contexto das barras de ferramentas">
 <!ENTITY Ctr_ctrnewinv					"Sublinhar novas opções da atual versão do &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Código CSS personalizado">
 <!ENTITY Ctr_cssoverride2				"O código CSS não será verificado por erros!">
