--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -169,7 +169,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 s)">
 <!ENTITY Ctr_findbar		"Iskalna vrstica">
 <!ENTITY Ctr_findbar_hws	"Zapri iskalno vrstico ob pomikanju po strani">
-<!ENTITY Ctr_findbar_width	"Širina iskalnih polj: ">
+<!ENTITY Ctr_findbar_width	"Širina iskalnega polja: ">
 <!ENTITY Ctr_findbarpos		"Položaj iskalne vrstice">
 <!ENTITY Ctr_findbar_def	"Spodaj (privzeto)">
 <!ENTITY Ctr_findbar_top	"Zgoraj">
